fixes: - buy-right: buttons and scroll issue - overview page: course features collapsing - doubts: reply button

--- a/sass/styles/media-query/media.o-client-add.scss
+++ b/sass/styles/media-query/media.o-client-add.scss
@@ -1,4 +1,5 @@
 @media screen and (max-width: 1200px) {
+  $font-md: 10px;
   .o-client-add {
     .card {
       @include padding-mixin(40px, 40px, 40px, 40px);
@@ -85,4 +86,6 @@
       }
     }
   }
+
+  
 }
